# CNN_perf

./: CMakeLists.txt  CNN_perf.sln  README.md  args.cpp  avx512conv.cpp  avx512conv.h  avxconv.cpp  baseconv.cpp  consts.h  convbench.sln  convbench.vcxproj  convbench.vcxproj.filters  jsonargs.cpp  log.cpp  main.cpp  simpleconv.cpp  sseconv.cpp  utils.cpp  utils.h
configs/: config_ex1.json
conv_test/: conv_test.vcxproj  conv_test.vcxproj.filters
conv_test/src/: conv_functions.cpp  conv_functions.h  conv_test.pro  main.cpp
example/: CMakeLists.txt  main.cpp  make_files.py  mulsum.cpp  mulsum.h  newargs.cpp  newargs.h  readme.md
example/additional_examples/: Convolution_performance.md  Development_acceleration.md  Error_detection.md  Other_processors.md  Testing_perfomance.md  convnetbench.sh  readme.md
float32_int8_test/: float32_int8_test.vcxproj
float32_int8_test/src/: main.cpp
headers/: args.h  avxconv.h  baseconv.h  consts.h  errors.h  jsonargs.h  log.h  simpleconv.h  sseconv.h  updencoding.h
sources/: args.cpp  avx512conv.cpp  avxconv.cpp  baseconv.cpp  jsonargs.cpp  log.cpp  main.cpp  simpleconv.cpp  sseconv.cpp  updencoding.cpp  utils.cpp
